--- a/assets/templates/sections/list/resumeImport.html
+++ b/assets/templates/sections/list/resumeImport.html
@@ -245,6 +245,7 @@
                         success: false
                     })
                 }
+                $.input.val("");
                 $.root.style.display = "none";
             });
         });
