--- a/views/premium.html
+++ b/views/premium.html
@@ -46,6 +46,7 @@
     <script src="/assets/js/premium/templates.sections.js"></script>
     <script src="/assets/js/premium/templates.editable.js"></script>
     <script src="/assets/js/premium/templates.components.js"></script>
+    <script src="/assets/templates/appResume/commons/sections/finish.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/templates/template1.html" type="riot/tag"></script>
 
     <!--/ JS components /-->
