--- a/assets/templates/sections/messenger/messenger.html
+++ b/assets/templates/sections/messenger/messenger.html
@@ -1,4 +1,4 @@
-<section-messenger class="messenger__launcher" data-active={ active }>
+<messenger-launcher class="messenger__launcher" data-active={ active }>
 
     <div class="WD__messenger__items">
         <div class="WD__messenger__item">
@@ -28,7 +28,7 @@
             <svg version="1.1" class="messenger__launcher__buttons__item__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" xml:space="preserve"><path d="M35.3,28.4c1,1,2.1,2,3.1,3.1c0.4,0.5,0.8,1,1.1,1.6c0.4,0.8,0,1.7-0.7,1.8l-4.6,0c-1.2,0.1-2.1-0.4-2.9-1.2c-0.6-0.7-1.2-1.3-1.8-2c-0.2-0.3-0.5-0.5-0.8-0.7c-0.6-0.4-1.2-0.3-1.5,0.4c-0.4,0.7-0.4,1.4-0.5,2.2c0,1.1-0.4,1.4-1.5,1.4c-2.3,0.1-4.5-0.2-6.5-1.4c-1.8-1-3.2-2.5-4.4-4.2c-2.4-3.2-4.2-6.8-5.8-10.5c-0.4-0.8-0.1-1.3,0.8-1.3c1.5,0,3,0,4.5,0c0.6,0,1,0.4,1.2,0.9c0.8,2,1.8,3.9,3,5.7c0.3,0.5,0.7,0.9,1.1,1.3c0.5,0.4,0.9,0.2,1.2-0.4c0.2-0.4,0.2-0.8,0.3-1.2c0.1-1.4,0.1-2.8-0.1-4.2c-0.1-0.9-0.6-1.4-1.5-1.6c-0.4-0.1-0.4-0.2-0.2-0.5c0.4-0.4,0.7-0.7,1.4-0.7h5.2c0.8,0.2,1,0.5,1.1,1.4l0,5.8c0,0.3,0.2,1.3,0.7,1.5c0.5,0.2,0.8-0.2,1-0.5c1.2-1.3,2.1-2.9,2.9-4.5c0.3-0.7,0.7-1.5,0.9-2.2c0.2-0.6,0.6-0.8,1.2-0.8l5,0c0.1,0,0.3,0,0.4,0c0.8,0.1,1.1,0.5,0.8,1.3c-0.4,1.3-1.2,2.4-2,3.5c-0.8,1.2-1.7,2.3-2.5,3.5C34.3,27,34.4,27.5,35.3,28.4z"></path></svg>
         </a>
     </div>
-    <div onClick={ onShow } class="messenger__launcher__opener">
+    <div onClick={ show } onUpdate="none" class="messenger__launcher__opener">
         <div class="messenger__launcher__badge">R</div>
         <div class="messenger__launcher__opener__button">
             <div class="messenger__launcher__icons">
@@ -50,8 +50,10 @@
     $.photo = 'https://randomuser.me/api/portraits/women/' + _.random(1, 99) + '.jpg';
     $.name = _.shuffle(['Ирина', 'Светлана', 'Виктория', 'Вероника', 'Екатерина', 'Ольга', 'Мария', 'Надежда', 'Наталья'])[0];
 
-    $.onShow = function(){
-        $.active = !$.active;
+    $.show = function(){
+        $.update({
+            active: !$.active
+        })
         if (!$.active){
             _.onEndTransition($.buttons, function(){
                 $.root.style.zIndex = "1";
@@ -93,4 +95,4 @@
 
 </script>
 
-</section-messenger>
+</messenger-launcher>
