--- a/assets/templates/sections/master/master.html
+++ b/assets/templates/sections/master/master.html
@@ -172,7 +172,7 @@
             pos: "right",
             title: "Заказать написание резюме",
             callback: function(){
-
+                $Sections.order.writing.show();
                 app.metrika.set("master.order", true);
             }
         },
