--- a/views/private.html
+++ b/views/private.html
@@ -48,12 +48,12 @@
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
 
-
-    <script src="/assets/js/commons.js"></script>
-    <script src="/assets/js/plugins.js"></script>
+    <script src="/assets/js/app.js"></script>
+    <!-- <script src="/assets/js/commons.js"></script>
+    <script src="/assets/js/plugins.js"></script> -->
 
     <!--/ JS components (store) /-->
-    <script src="/assets/js/components/tutorial/welcome.js"></script>
+    <!-- <script src="/assets/js/components/tutorial/welcome.js"></script>
     <script src="/assets/js/components/tutorial/resume/free/interface.js"></script>
     <script src="/assets/js/components/i18n/resume/basic/template/ru.js"></script>
     <script src="/assets/js/store/account.js"></script>
@@ -75,7 +75,7 @@
     <script src="/assets/js/store/resume/premium/coverletter.js"></script>
     <script src="/assets/js/store/resume/premium/fonts.js"></script>
     <script src="/assets/js/store/resume/premium/hobby.js"></script>
-    <script src="/assets/js/store/resume/premium/resume.demo.js"></script>
+    <script src="/assets/js/store/resume/premium/resume.demo.js"></script> -->
     <script src="/assets/js/components/init.js"></script>
 
     <!-- <script src="/assets/js/libs.js"></script>
