--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,13 +34,14 @@
 @import 'ui/rangeslider';
 @import 'ui/switcher';
 @import 'ui/slider';
+@import 'ui/carousel';
 @import 'ui/social';
+@import 'ui/chart/chartist/chartist';
+@import 'ui/chart/chartRadial';
 @import 'states/fontSize';
 
 // modules
 @import 'modules/alert';
-@import 'modules/chart/chartist/chartist';
-@import 'modules/chart/chartRadial';
 @import 'modules/oScreen';
 @import 'modules/screens';
 @import 'modules/tutorial';
@@ -52,14 +53,14 @@
 
 // Sections
 @import 'sections/sections';
-@import 'sections/mobile/screens/screens';
-@import 'sections/mobile/screens/resume';
-@import 'sections/mobile/screens/profile';
-@import 'sections/mobile/screens/payment';
-@import 'sections/mobile/menu';
-@import 'sections/mobile/navbar';
-@import 'sections/mobile/tutorial/welcome';
-@import 'sections/profile/profile';
+// @import 'sections/mobile/screens/screens';
+// @import 'sections/mobile/screens/resume';
+// @import 'sections/mobile/screens/profile';
+// @import 'sections/mobile/screens/payment';
+// @import 'sections/mobile/menu';
+// @import 'sections/mobile/navbar';
+// @import 'sections/mobile/tutorial/welcome';
+// @import 'sections/profile/profile';
 
 // master
 @import 'sections/master/master';
@@ -71,37 +72,37 @@
 @import 'sections/messenger/messengerLauncher';
 
 // jptest
-@import 'sections/jptest/jptest';
-@import 'sections/jptest/jptestEnter';
-@import 'sections/jptest/result/main';
-@import 'sections/jptest/result/columns';
-@import 'sections/jptest/result/skills';
-@import 'sections/jptest/result/humps';
-@import 'sections/jptest/result/graph';
-@import 'sections/jptest/result/specialties';
-@import 'sections/jptest/result/path';
-@import 'sections/jptest/result/finish';
-@import 'sections/jptest/result/ui';
+// @import 'sections/jptest/jptest';
+// @import 'sections/jptest/jptestEnter';
+// @import 'sections/jptest/result/main';
+// @import 'sections/jptest/result/columns';
+// @import 'sections/jptest/result/skills';
+// @import 'sections/jptest/result/humps';
+// @import 'sections/jptest/result/graph';
+// @import 'sections/jptest/result/specialties';
+// @import 'sections/jptest/result/path';
+// @import 'sections/jptest/result/finish';
+// @import 'sections/jptest/result/ui';
 
 // plan
-@import 'sections/plan/plan';
+// @import 'sections/plan/plan';
 
 // inbox
-@import 'sections/inbox/inbox';
+// @import 'sections/inbox/inbox';
 
 // payment
-@import 'sections/payment/payment';
+// @import 'sections/payment/payment';
 
 // offers
-@import 'sections/offers/premium/premium';
-@import 'sections/offers/premium/slides';
-@import 'sections/offers/premium/ui';
+// @import 'sections/offers/premium/premium';
+// @import 'sections/offers/premium/slides';
+// @import 'sections/offers/premium/ui';
 
 // overview
 @import 'sections/overview/main';
-@import 'sections/overview/premium/header';
-@import 'sections/overview/premium/slides';
-@import 'sections/overview/premium/ui';
+// @import 'sections/overview/premium/header';
+// @import 'sections/overview/premium/slides';
+// @import 'sections/overview/premium/ui';
 
 // @import 'sections/overview/jptest/slides';
 // @import 'sections/overview/overviewFunctions';
@@ -109,17 +110,17 @@
 // Resume list
 @import 'sections/list/resumeList';
 @import 'sections/list/resumeItem';
-@import 'sections/list/resumeStat';
-@import 'sections/list/resumePreview';
-@import 'sections/list/resumeSelect';
-@import 'sections/list/resumeLikes';
-@import 'sections/list/resumeSection';
-@import 'sections/list/mobile/resumeList';
-@import 'sections/list/mobile/resumeListItem';
-@import 'sections/list/mobile/resumeStat';
+// @import 'sections/list/resumeStat';
+// @import 'sections/list/resumePreview';
+// @import 'sections/list/resumeSelect';
+// @import 'sections/list/resumeLikes';
+// @import 'sections/list/resumeSection';
+// @import 'sections/list/mobile/resumeList';
+// @import 'sections/list/mobile/resumeListItem';
+// @import 'sections/list/mobile/resumeStat';
 
 // Resume create basic
-@import 'appResume/basic/style';
+// @import 'appResume/basic/style';
 
 // states
 @import 'states/states';
